@@ -37,8 +37,6 @@
 #include "ap_mpm.h"
 #include "mpm_common.h"
 
-#include "mod_so.h" /* for dumping loaded modules */
-
 /* WARNING: Win32 binds http_main.c dynamically to the server. Please place
  *          extern functions and global data in another appropriate module.
  *
@@ -609,18 +607,12 @@ int main(int argc, const char * const argv[])
     rv = ap_process_config_tree(server_conf, ap_conftree,
                                 process->pconf, ptemp);
     if (rv == OK) {
-        APR_OPTIONAL_FN_TYPE(ap_dump_loaded_modules) *dump_modules =
-            APR_RETRIEVE_OPTIONAL_FN(ap_dump_loaded_modules);
-        
         ap_fixup_virtual_hosts(pconf, server_conf);
         ap_fini_vhost_config(pconf, server_conf);
         apr_hook_sort_all();
 
-        if (dump_modules && ap_exists_config_define("DUMP_MODULES")) {
-            dump_modules(pconf, server_conf);
-        }
-
         if (configtestonly) {
+            ap_run_test_config(pconf, server_conf);
             ap_log_error(APLOG_MARK, APLOG_STARTUP, 0, NULL, "Syntax OK");
             destroy_and_exit_process(process, 0);
         }
